@@ -47,6 +47,10 @@ Changes for v2.00
 - Tentative fix for Setup.vbs on 64-bit Windows 7 (Greg)
 - Disable context menu items for device upgrade keymoves shown on the keymove panel (Greg)
 - Enable export as a .ir file
+- Enable Open RDF toolbar button after a download (Graham)
+- Change bar color of Progress Bars to aquamarine, for greater contrast with blue text (Graham)
+- Avoid null pointer exception in Code Selector when a device type has no built-in setup codes (Graham)
+- Scroll notes of General Panel to top upon opening (Graham)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
